--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               </a>
             </li>
             <li class="menu-item">
-              <a href="#" class="menu-link" onclick="loadPage('piano.html', this)">
+              <a href="#" class="menu-link" onclick="loadPage('Piano.html', this)">
                 <span class="material-symbols-rounded">Piano</span>
                 <span class="menu-label">Piano</span>
               </a>
